--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+.main{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+}
+.box{
+  text-align: center;
+  border: 1px solid black;
+  height: 500px;
+}
+.box.WIN{
+  border: 1px solid red;
+}
+.box.LOSE{
+  border: 1px solid blue;
+}
+.box img{
+  width: 300px;
+  height: 300px;
+}
+body{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+  font-size: 50px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btns{
+  margin-top: 10px;
 }
